--- a/JenkinsFile
+++ b/JenkinsFile
@@ -17,7 +17,11 @@ pipeline {
                 }
             }
         }
-
+ stage('Build') {
+            steps {
+                sh 'mvn clean package'
+            }
+        }
         stage(' Run Main Application') {
             steps {
                 script {
