--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
     agent any
     environment {
-        DOCKER_IMAGE_NAME = 'calculator'
+        DOCKER_IMAGE = 'priyansh2000/calculator:latest'
         GITHUB_REPO_URL = 'https://github.com/priyansh2000/SPE_MiniProject.git'
         OPTION = 1
         NUMBER = 2
@@ -32,12 +32,9 @@ pipeline {
         }
 
         stage('Build Docker Image') {
-            steps {
-                script {
-                    // Build Docker image
-                    docker.build("${DOCKER_IMAGE_NAME}", '.')
-                }
-            }
+             steps {
+                 sh 'docker build -t $DOCKER_IMAGE .'
+                 }
         }
 
         stage('Push Docker Image') {
