Updated Jenkins for pushing docker image

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -39,14 +39,22 @@ pipeline {
 
         stage('Push Docker Image') {
             steps {
-                script {
-                    docker.withRegistry('', 'DockerHubCred') {
-                        sh "docker tag ${DOCKER_IMAGE_NAME} priyansh/calculator:latest"
-                        sh "docker push priyansh/calculator"
+                withCredentials([usernamePassword(credentialsId: 'DockerHubCred', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                    script {
+                        def loginStatus = sh(script: 'echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin', returnStatus: true)
+                        if (loginStatus != 0) {
+                            error("❌ Docker login failed. Check credentials and try again.")
+                        }
+
+                        def pushStatus = sh(script: 'docker push $DOCKER_IMAGE', returnStatus: true)
+                        if (pushStatus != 0) {
+                            error("❌ Docker image push failed. Check DockerHub repository permissions.")
+                        }
                     }
                 }
             }
         }
+
 
         stage('Run Ansible Playbook') {
             steps {
