Updated deploy.yml for removing automatically if existing

--- a/deploy.yml
+++ b/deploy.yml
@@ -19,5 +19,11 @@
         name: docker
         state: started
 
+    - name: Stop and Remove Existing Container (if it exists)
+      shell: |
+        docker stop calculator || true
+        docker rm calculator || true
+      ignore_errors: yes
+
     - name: Run Docker container
       shell: docker run -it -d --name calculator calculator
