Added post build action

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -67,4 +67,25 @@ pipeline {
             }
         }
     }
+     post {
+            success {
+                emailext(
+                    to: 'iam49smith@gmail.com',
+                    subject: "SUCCESS: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+                    body: """<p>The build and deployment were <b>successful!</b></p>
+                             <p>Check the build details: <a href="${env.BUILD_URL}">${env.BUILD_URL}</a></p>"""
+                )
+            }
+            failure {
+                emailext(
+                    to: 'iam49smith@gmail.com',
+                    subject: "FAILURE: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
+                    body: """<p>The build or deployment <b>failed!</b></p>
+                             <p>Check the build details: <a href="${env.BUILD_URL}">${env.BUILD_URL}</a></p>"""
+                )
+            }
+            always {
+                cleanWs()
+            }
+        }
 }
