Added post build action

--- a/JenkinsFile
+++ b/JenkinsFile
@@ -70,7 +70,7 @@ pipeline {
      post {
             success {
                 emailext(
-                    to: 'iam49smith@gmail.com',
+                    to: 'raipriyansh20@gmailcom',
                     subject: "SUCCESS: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
                     body: """<p>The build and deployment were <b>successful!</b></p>
                              <p>Check the build details: <a href="${env.BUILD_URL}">${env.BUILD_URL}</a></p>"""
@@ -78,7 +78,7 @@ pipeline {
             }
             failure {
                 emailext(
-                    to: 'iam49smith@gmail.com',
+                    to: 'raipriyansh20@gmailcom',
                     subject: "FAILURE: ${env.JOB_NAME} #${env.BUILD_NUMBER}",
                     body: """<p>The build or deployment <b>failed!</b></p>
                              <p>Check the build details: <a href="${env.BUILD_URL}">${env.BUILD_URL}</a></p>"""
