--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </properties>
 
     <dependencies>
-        <!-- JUnit 5 for Testing -->
+        <!-- JUnit 5  Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
